-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.13
-
Component/s: None
-
Labels:
-
Environment:
ReactOS 0.4.12-dev-632-gd93e516, VirtualBox 5.1.38.
-
Module:
-
Guilty Commit:0.4.12-dev-632-gd93e516747e3220ba182f77824e8b1a8b548edae
For reproducing this,
- Download IE6 web setup here: http://www.oldversion.com.ru/windows/download/internet-explorer-6-0-setup-only (version tested by me, but for me IE6 SP1 offline setup also affected, so you can use any other IE6 build for the test);
- Open Regedit, go to HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Internet Explorer and set Build, Version and W2kVersion to lower value than in ie6setup.exe properties window (for example, I tested version 6.0.2800.1106, so I lowered version in the registry to 6.0.2600.0000: Build 6260000, Version 6.0.2600.0000 and W2kVersion also 6.0.2600.0000. After this, IE6 setup is able to run correctly and not reporting that newer version of Internet Explorer is already installed. I think that 5.0 or older version number can be also used there);
- Reboot ReactOS for applying changed registry settings;
- Launch ie6setup.exe, accept the EULA and click "Next".
After this, in 0.4.12-dev-631-g88cd8d681c15fb06bd417985fe2c873df688a3e9, installation continues successfully. Since 0.4.12-dev-632-gd93e516747e3220ba182f77824e8b1a8b548edae, it fails to snap ExtractFilesW in advpack.dll, even with replaced advpack from Win2k3.
In debug.log, I see the following before this error appears:
(dll/win32/kernel32/client/loader.c:384) LoadLibraryExW(C:\ReactOS\System32\digsig.dll) failing with status c000000f |
fixme:(dll/win32/setupapi/queue.c:1767) notification 262144 params 63e42c,0 |
fixme:(dll/win32/setupapi/queue.c:418) awful hack: extracting cabinet "C:\\DOCUME~1\\ADMINI~1\\LOCALS~1\\Temp\\IXP000.TMP\\" |
err:(dll/win32/setupapi/queue.c:1761) copy error 2 "C:\\DOCUME~1\\ADMINI~1\\LOCALS~1\\Temp\\IXP000.TMP\\WinInet.dll" -> "C:\\ReactOS\\System32\\WinInet.dll" |
fixme:(dll/win32/setupapi/queue.c:1767) notification 262144 params 63e42c,0 |
fixme:(dll/win32/setupapi/queue.c:418) awful hack: extracting cabinet "C:\\DOCUME~1\\ADMINI~1\\LOCALS~1\\Temp\\IXP000.TMP\\" |
err:(dll/win32/setupapi/queue.c:1761) copy error 2 "C:\\DOCUME~1\\ADMINI~1\\LOCALS~1\\Temp\\IXP000.TMP\\URLMON.DLL" -> "C:\\ReactOS\\System32\\URLMON.DLL" |
(dll/ntdll/ldr/ldrpe.c:1036) Failed to snap advpack.dll!ExtractFilesW |
err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"The procedure entry point ExtractFilesW could not be located in the dynamic link library advpack.dll.\r\n" |
So problem is in ldr, not in advpack.
- relates to
-
CORE-8485 ie6 portable needs .local file support
-
- Resolved
-