[URLMON] Directly call cabinet!Extract instead of calling it via advpack!ExtractFilesW CORE-15795